modificari pom.xml