@@ -1,18 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ro.itschool</groupId>
     <artifactId>untitled1</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <!--    <packaging>pom</packaging>-->
-    <!--    <modules>-->
-    <!--        <module>module-info</module>-->
-    <!--        <module>src/main/java/moduleInfo.java</module>-->
-    <!--    </modules>-->
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -21,7 +14,6 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -32,29 +24,17 @@
             <artifactId>javafx-fxml</artifactId>
             <version>23.0.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-plugin -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.openjfx</groupId>-->
-        <!--            <artifactId>javafx-plugin</artifactId>-->
-        <!--            <version>0.0.8</version>-->
-        <!--            <scope>runtime</scope>-->
-        <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx-fontawesome -->
         <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-fontawesome</artifactId>
             <version>4.7.0-9.1.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
             <version>24-ea+19</version>
         </dependency>
-
-
     </dependencies>
-
 
     <build>
         <plugins>
@@ -67,56 +47,82 @@
                     <target>23</target>
                 </configuration>
             </plugin>
-            <!-- Plugin pentru rularea aplicației JavaFX -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jlink</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <mainClass>ro.itschool.Main</mainClass>
-                    <compress>2</compress>
-                    <noManPages>true</noManPages>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <stripDebug>true</stripDebug>
-                    <launcher>${project.artifactId}</launcher>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>ro.itschool.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>exec</goal>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>create-directories</id>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <tasks>
+                                <mkdir dir="${project.build.directory}/installer"/>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <executions>
+                    <execution>
+                        <id>package</id>
+                        <goals>
+                            <goal>jpackage</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <!-- obtain warp-packer.exe from: "https://github.com/dgiagio/warp/releases/download/v0.3.0/windows-x64.warp-packer.exe" -->
-                    <executable>${project.basedir}\tools\warp-packer.exe</executable>
-                    <arguments>
-                        <argument>--arch</argument>
-                        <argument>windows-x64</argument>
-
-                        <argument>--input_dir</argument>
-                        <argument>${project.build.directory}\image</argument>
-
-                        <argument>--exec</argument>
-                        <argument>bin\${project.artifactId}.bat</argument>
-
-                        <argument>--output</argument>
-                        <argument>${project.build.directory}\${project.artifactId}.exe</argument>
-                    </arguments>
+                    <input>${project.build.directory}</input>
+                    <destination>${project.build.directory}/installer</destination>
+                    <mainJar>${project.build.finalName}-jar-with-dependencies.jar</mainJar>
+                    <mainClass>ro.itschool.Main</mainClass>
+                    <name>${project.artifactId}</name>
+                    <appVersion>${project.version}</appVersion>
+                    <vendor>ro.itschool</vendor>
+                    <type>exe</type>
+                    <javaOptions>
+                        <installerType>inno</installerType>
+                        <javaOption>--enable-preview</javaOption>
+                    </javaOptions>
                 </configuration>
             </plugin>
         </plugins>
